# pm_bot

./: .env.example  .gitignore  Caddyfile  DESIGN.md  Dockerfile  GEMINI.md  Qwen_json_20260420_7mcyus2pd.excalidraw  README.md  convert_xml.py  docker-compose.yml  generate_test_doc.py  implementation_plan.docx  main.py  notes.md  pyproject.toml  requirements.txt
backend/: Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  mlflow.db  pyproject.toml  requirements.txt  test.sh
backend/agent/: __init__.py  models.py  serializers.py  tasks.py  urls.py  viewsets.py
backend/agent/brain/: graph.py  nodes.py  prompts.py
backend/agent/migrations/: 0001_initial.py  0002_agentissuesession_created_by.py  0002_initial.py  0003_agentissuesession_issue_title_and_more.py
backend/api/v1/: SUMMARY.md  urls.py
backend/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  viewsets.py
backend/authentication/migrations/: 0001_initial.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/chat/: __init__.py  consumers.py  middleware.py  models.py  routing.py  urls.py  viewsets.py
backend/chat/agent/: __init__.py  db_tools.py  graph.py  memory.py  prompts.py  query_graph.py  tools.py
backend/chat/migrations/: 0001_initial.py
backend/chatbot/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chatbot/agent/: __init__.py  graph.py  memory.py  tools.py
backend/chatbot/migrations/: 0001_initial.py  __init__.py
backend/deep_agent/: admin.py  apps.py  models.py  serializers.py  tasks.py  tasks_manual.py  tests.py  urls.py
backend/deep_agent/brain/: graph.py  nodes.py
backend/integrations/: __init__.py  urls.py  viewsets.py
backend/integrations/plane/: client.py
backend/plane_client/: apps.py  client.py  cloud_tests.py  exceptions.py  tests.py
backend/tests/: conftest.py
(+106 files in other folders)
