[project]
name = "pm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "langchain>=1.2.15",
    "langfuse>=4.0.6",
    "langgraph>=1.1.6",
    "litellm>=1.83.4",
    "python-dotenv>=1.0.1",
]
